# accepts.py

./: .codeclimate.yml  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  wercker.yml
accepts/: __init__.py
examples/: @accepts(int)
tests/: @accepts((int,type(None)))  @accepts(int)
tests/.sh/: run.sh  url.txt
tests/accepts/examples/: @accepts((int,float))
