[metadata]
name = accepts
version = 1.0.0
description-file = README.rst
project_urls = 
	Bug Tracker = https://github.com/looking-for-a-job/accepts.py/issues	
	Homepage = https://github.com/looking-for-a-job/accepts.py
classifiers = 
	Development Status :: 5 - Production/Stable	
	Intended Audience :: Developers	
	License :: OSI Approved :: BSD License	
	Natural Language :: English	
	Natural Language :: Russian	
	Programming Language :: Python :: 2	
	Programming Language :: Python :: 2.6	
	Programming Language :: Python :: 2.7	
	Programming Language :: Python :: 3	
	Programming Language :: Python :: 3.0	
	Programming Language :: Python :: 3.1	
	Programming Language :: Python :: 3.3	
	Programming Language :: Python :: 3.4	
	Programming Language :: Python :: 3.5	
	Programming Language :: Python :: 3.6	
	Programming Language :: Python :: 3.7	
	Topic :: Software Development	
	Topic :: Software Development :: Libraries :: Python Modules
description = @accepts decorator to check arguments types
keywords = type decorator

[options]
packages = 
	accepts


