# https://pypi.org/project/setupcfg-generator/
[metadata]
name = accepts
version = 2019.4.13
url = https://github.com/looking-for-a-job/accepts.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = type decorator

[options]
install_requires = 
	public==2018.11.20
	setuptools==41.0.1
packages = 
	accepts
